Overhauled validation. Now using express-validation method. Validation is handled in the middleware
